module.exports in index

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-input-tags",
   "version": "1.0.0",
   "description": "React component for creating an input that holds multiple tags",
-  "main": "./src/components/tag-input.js",
+  "main": "./dist/react-input-tags.js",
   "repository": {},
   "author": "valentijn nieman",
   "license": "MIT",
