--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-input-tags",
   "version": "1.0.0",
   "description": "React component for creating an input that holds multiple tags",
-  "main": "./src/components/tag-input.js",
+  "main": "./dist/components/tag-input.js",
   "repository": {},
   "author": "valentijn nieman",
   "license": "MIT",
@@ -10,8 +10,11 @@
     "build": "src/**/*.js"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "babel src --out-dir dist",
     "watch": "webpack --watch"
+  },
+  "babel": {
+    "presets": ["es2015", "react"]
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
